# TaliskerFramework

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac  init.cc  stub.c
Foundation/: Array.cc  DefaultAllocator.cc  Dictionary.cc  Factory.cc  Makefile.am  Object.cc  Process.cc  Registry.cc  String.cc  Thread.cc  URI.cc  UUID.cc  p_foundation.hh
HelloApp/: HelloApp  Makefile.am  main.cc
IDL/: IAllocator.idl  IApplication.idl  IApplicationDelegate.idl  IArray.idl  IControl.idl  IDictionary.idl  IEvent.idl  IFactory.idl  IObject.idl  IRegistry.idl  IString.idl  IVariant.idl  Interfaces.idl  Makefile.am
Samples/: .gitignore  Makefile.am  array.cc  string  string.cc
Samples/HelloApp/: HelloApp
Talisker/: .gitignore  Application.hh  Array.hh  Control.hh  Coordinates.hh  DefaultAllocator.hh  Dictionary.hh  Factory.hh  IAllocator.h  IApplicationDelegate.h  IControl.h  IEvent.h  Interfaces.h  Makefile.am  Object.hh  Process.hh  Registry.hh  String.hh  Talisker.h  Thread.hh  URI.hh  UUID.hh  _decl.h
Talisker/Internal/: Internal.h  Makefile.am
Talisker/Internal/XCB/: Application.hh  Control.hh  Display.hh  Event.hh  Makefile.am  XCB.h
Tools/: .gitignore  Makefile.am  uuidgen.cc
UI/: Application.cc  Control.cc  Coordinates.cc  Makefile.am  p_ui.hh
XCB/: Application.cc  Control.cc  Display.cc  Event.cc  Makefile.am  p_xcb.hh
m4/: Makefile.am  uriparser.m4
